[package]
name = "quad-tree"
version = "0.1.0"
authors = ["AndrewVetovitz <AndrewVetovitz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10"
log = "0.4"
cfg-if = "1"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"


